<resources xmlns:tools="http://schemas.android.com/tools">
    <!--Application Name-->
    <string name="app_name">MovieDB</string>

    <!--ImageView android:contentDescription-->
    <string name="img_backdrop">Backdrop Path</string>
    <string name="img_cast">Cast Profile Path</string>
    <string name="img_crew">Crew Profile Path</string>

    <!--MainMenuActivity.java-->
    <string name="search">Search</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="popular">Popular</string>
    <string name="movie_details">Movie Details</string>

    <!--MainActivity.java-->
    <string name="btn_hit">Hit API</string>
    <string name="movie_id">Movie ID</string>
    <string name="null_movie_id">Movie ID is not available in MovieDB.</string>

    <!--NowPlayingFragment.java-->
    <string name="txt_title">Title</string>
    <string name="lbl_title">%sTitle</string>
    <string name="txt_overview">Overview</string>
    <string name="lbl_overview">%sOverview</string>
    <string name="lbl_release_date">%sRelease Date</string>

    <!--MovieDetailsFragment.java-->
    <string name="txt_movie_details">Movie Details</string>
    <string name="lbl_rating">%sRating</string>
    <string name="lbl_vote_count">%sVote Count</string>
    <string name="lbl_popularity">%sPopularity</string>
    <string name="lbl_runtime">%sRuntime</string>
    <string name="txt_language">Spoken Language</string>
    <string name="lbl_language">%sSpoken Language</string>
    <string name="txt_genre">Genre</string>
    <string name="lbl_genre">%sGenre</string>
    <string name="txt_tagline">Tagline</string>
    <string name="lbl_tagline">%sTagline</string>
    <string name="lbl_cast_name">%sCast Name</string>
    <string name="lbl_character_name">%sCharacter Name</string>
    <string name="lbl_crew_name">%sCrew Name</string>
    <string name="lbl_role_name">%sRole Name</string>
    <string name="txt_production_companies">Production Companies</string>
    <string name="btn_homepage">Visit Homepage</string>
    <string name="progbar_loading">Loading..</string>
</resources>