<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="250dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="16dp"
    app:cardBackgroundColor="@color/colorCard"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_crew_moviedetails"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@drawable/crew"
            android:contentDescription="@string/img_crew"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/crew" />

        <TextView
            android:id="@+id/lbl_crew_moviedetails"
            style="@style/MovieDBTextView.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/lbl_crew_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_crew_moviedetails" />

        <TextView
            android:id="@+id/lbl_role_moviedetails"
            style="@style/MovieDBTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/lbl_role_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lbl_crew_moviedetails"
            app:layout_constraintStart_toStartOf="@+id/lbl_crew_moviedetails"
            app:layout_constraintTop_toBottomOf="@+id/lbl_crew_moviedetails" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>