<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_card_nowplaying"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card_nowplaying"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_cv_card_nowplaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster_card_nowplaying"
                android:layout_width="100dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster_backdrop" />

            <TextView
                android:id="@+id/lbl_title_card_nowplaying"
                style="@style/MovieDBTextView.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lbl_title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/divider_card_nowplaying"
                app:layout_constraintStart_toEndOf="@+id/img_poster_card_nowplaying"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_overview_card_nowplaying"
                style="@style/MovieDBTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/lbl_overview"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintEnd_toEndOf="@+id/lbl_title_card_nowplaying"
                app:layout_constraintStart_toStartOf="@+id/lbl_title_card_nowplaying"
                app:layout_constraintTop_toBottomOf="@+id/lbl_title_card_nowplaying" />

            <TextView
                android:id="@+id/lbl_releasedate_card_nowplaying"
                style="@style/MovieDBTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/colorCard"

                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="7.5dp"
                android:text="@string/lbl_release_date"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/release_date"
                app:drawableTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/img_poster_card_nowplaying"
                app:layout_constraintStart_toStartOf="@+id/lbl_overview_card_nowplaying" />

            <View
                android:id="@+id/divider_card_nowplaying"
                android:layout_width="7dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>